interactive-clap-derive/src/tests/snapshots/interactive_clap_derive__tests__test_simple_struct__doc_comments_propagate-2.snap
---
source: interactive-clap-derive/src/tests/test_simple_struct.rs
expression: pretty_codegen(&to_cli_args_codegen)
---
impl interactive_clap::ToCliArgs for CliArgs {
    fn to_cli_args(&self) -> std::collections::VecDeque<String> {
        let mut args = std::collections::VecDeque::new();
        if self.third_field {
            args.push_front(std::concat!("--", "third-field").to_string());
        }
        if let Some(arg) = &self.second_field {
            args.push_front(arg.to_string());
            args.push_front(std::concat!("--", "second-field").to_string());
        }
        if let Some(arg) = &self.first_field {
            args.push_front(arg.to_string());
            args.push_front(std::concat!("--", "first-field").to_string());
        }
        args
    }
}
