interactive-clap-derive/src/tests/snapshots/interactive_clap_derive__tests__test_simple_struct__flag-2.snap
---
source: interactive-clap-derive/src/tests/test_simple_struct.rs
expression: pretty_codegen(&to_cli_args_codegen)
---
impl interactive_clap::ToCliArgs for CliArgs {
    fn to_cli_args(&self) -> std::collections::VecDeque<String> {
        let mut args = std::collections::VecDeque::new();
        if self.offline {
            args.push_front(std::concat!("--", "offline").to_string());
        }
        args
    }
}

