interactive-clap-derive/src/tests/snapshots/interactive_clap_derive__tests__test_simple_struct__simple_struct-2.snap
---
source: interactive-clap-derive/src/tests/test_simple_struct.rs
expression: pretty_codegen(&to_cli_args_codegen)
---
impl interactive_clap::ToCliArgs for Args {
    fn to_cli_args(&self) -> std::collections::VecDeque<String> {
        let mut args = std::collections::VecDeque::new();
        if let Some(arg) = &self.second_name {
            args.push_front(arg.to_string())
        }
        if let Some(arg) = &self.first_name {
            args.push_front(arg.to_string())
        }
        if let Some(arg) = &self.age {
            args.push_front(arg.to_string())
        }
        args
    }
}

